# foresight

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml
autoresearch/: README.md  program.md
configs/wandb/: default.yaml  experiment_configs.yaml
dashboard/: .gitignore  package-lock.json  package.json
dashboard/scripts/: check-status.js  generate-status.js  watch-status.js
dashboard/src/: App.tsx  index.css
demo/: DESIGN.md  Dockerfile  README.md  app.py  config.yaml  fly.toml
demo/backend/: __init__.py  config.py  main.py  requirements.txt
demo/components/: __init__.py  chat.py  comparison.py  thoughts.py  timeline.py
demo/frontend/: .env.production  index.html  package.json  tailwind.config.js
demo/pipeline/: __init__.py  demo_pipeline.py
demo/tests/: __init__.py  test_components.py  test_pipeline.py
infra/modal/: README.md  app.py  inference_app.py  inference_dino.py  inference_video.py
paper/: README.md  foresight.tex
research/: AGENT_GUIDE.md  FINDINGS.md  README.md  SETUP_CHECKLIST.md  research_plan.yaml
research/experiments/: README.md  archived-p4-alternative-vlm.md  c1-vlm-latent-sufficiency.md  c2-adapter-bridging.md  c3-future-prediction.md  c4-pixel-verification.md  p2-hybrid-encoder.md  p4-alternative-vlm.md  q1-latent-alignment.md  q2-information-preservation.md  q3-temporal-coherence.md  q4-training-data.md  q5-prediction-horizon.md
research/hypotheses/: core-hypothesis.md
research/papers/: _template.md  dreamer-v3.md  hunyuan-video.md  index.md  (+4 more)
scripts/: generate-experiment-docs.py  sync-results.sh
(+114 files in other folders)
